first implementation of listing songs and created songs "app"

--- a/music_streaming/templates/base.html
+++ b/music_streaming/templates/base.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Music Streaming</title>
+        <title>{%block title %}Music Streaming{% endblock title %}</title>
     </head>
     <body>
+        <header>
+            
+        </header>
         {% block content %}{% endblock content %}
     </body>
 </html>
