--- a/music_streaming/templates/index.html
+++ b/music_streaming/templates/index.html
@@ -16,4 +16,9 @@
     {% empty %}
     <p>No songs are available.</p>
 {% endfor %}
+{% if user.is_authenticated %}
+    <a href="{% url 'userProfile' %}">Return to Profile</a>
+{% else %}
+    <a href="{% url 'userLogin' %}">Login</a>
+{% endif %}
 {% endblock content %}
