--- a/music_streaming/templates/userLogin.html
+++ b/music_streaming/templates/userLogin.html
@@ -11,5 +11,5 @@
         <input type = "submit" value = "Login">
     </form>
 
-    <p>Don't have an account? <a href = "{% url 'register' %}"> Register</a></p>
+    <p>Don't have an account? <a href = "{% url 'userCreate' %}"> Register</a></p>
 {%endblock content %}
