--- a/music_streaming/templates/userLogin.html
+++ b/music_streaming/templates/userLogin.html
@@ -7,8 +7,8 @@
 
     <form action = "" method = "post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type = "submit" value = "Login">
+        {{ login_form.as_p }}<!--TODO add form for login-->
+        <input type = "submit" value = "Login"/>
     </form>
 
     <p>Don't have an account? <a href = "{% url 'userCreate' %}"> Register</a></p>
