--- a/music_streaming/templates/userLogin.html
+++ b/music_streaming/templates/userLogin.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 
 {% block title %} Login {% endblock title %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Login</h1>
+    <h1>Sign Up</h1>
 
     <form action = "" method = "post">
         {% csrf_token %}
-        {{ form | crispy }}<!--TODO add form for login-->
+        {{ form|crispy }}
         <input type = "submit" value = "Login"/>
     </form>
 
-    <p>Don't have an account? <a href = "{% url 'userCreate' %}"> Register</a></p>
+    <p>Don't have an account? <a href = ""> Register</a></p>
 {%endblock content %}
