renamed userCreation and userLogin in signup and login. Moved them in registration folder for using django built-in features

--- a/music_streaming/templates/registration/signup.html
+++ b/music_streaming/templates/registration/signup.html
@@ -9,8 +9,8 @@
     <form action = "" method = "post">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type = "submit" value = "Login"/>
+        <button type = "submit" class = "btn btn-success"> Sign Up </button>
     </form>
 
-    <p>Don't have an account? <a href = ""> Register</a></p>
+    <p>Already have an account? <a href = ""> Register</a></p>
 {%endblock content %}
