--- a/music_streaming/templates/index.html
+++ b/music_streaming/templates/index.html
@@ -19,6 +19,6 @@
 {% if user.is_authenticated %}
     <a href="{% url 'userProfile' %}">Return to Profile</a>
 {% else %}
-    <a href="{% url 'signup' %}">Login</a>
+    <a href="{% url 'signup' %}">Sign Up/ Login</a>
 {% endif %}
 {% endblock content %}
