--- a/music_streaming/templates/registration/signup.html
+++ b/music_streaming/templates/registration/signup.html
@@ -12,5 +12,5 @@
         <button type = "submit" class = "btn btn-success"> Sign Up </button>
     </form>
 
-    <p>Already have an account? <a href = ""> Register</a></p>
+    <p>Already have an account? <a href = "{% url 'login' %}"> Log In</a></p>
 {%endblock content %}
