--- a/music_streaming/templates/index.html
+++ b/music_streaming/templates/index.html
@@ -17,7 +17,7 @@
     <p>No songs are available.</p>
 {% endfor %}
 {% if user.is_authenticated %}
-    <a href="{% url 'userProfile' %}">Return to Profile</a>
+    <a href="{% url 'profile' %}">Return to Profile</a>
 {% else %}
     <a href="{% url 'signup' %}">Sign Up/ Login</a>
 {% endif %}
