added guidelines for later in userProfile

--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -9,7 +9,10 @@
         {% for song in playlist.songs %}
             <p> {{ song.name }} </p>
         {% endfor %}
+        <!--TODO add an if to check if there are no playlist. If not show button to create new playlists-->
         {% empty %}
-            <p> You haven't created a playlist yet! </p>
+            <p> You haven't created a playlist yet! <a href = "">Create one</a></p><!--TODO"{% url 'playlistCreation'}"-->
     {% endfor %}
+
+    <a href="{% url 'index' %}">Go to song list</a>
 {% endblock %}
