--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -15,5 +15,6 @@
     {% endfor %}
 
     <a href="{% url 'index' %}">Go to song lists</a>
+    <a href="{% url 'password_change' %}">Change Password</a>
     <a href="{% url 'logout' %}">Log Out</a>
 {% endblock %}
