--- a/music_streaming/templates/playlistDelete.html
+++ b/music_streaming/templates/playlistDelete.html
@@ -4,7 +4,7 @@
 
 <form method = "post">
     {% csrf_token %}
-    <p>Are you sure you want to delete "{{ object.name }}""</p>
+    <p>Are you sure you want to delete "{{ object.name }}"?</p>
     <input type = "submit" value = "Yes, delete.">
 </form>
 
