--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -3,11 +3,11 @@
 
 {% block content %}
     <h1>Welcome back, {{ user.name }}.</h1>
-    {% if playlists %}<!--TODO-->
+    {% if playlists %}
         <h2> Playlists: </h2>
         {% for playlist in playlists %}
             <h3> {{ playlist.name }} </h3>
-            <a href= "{% url 'playlist_detail' %}">Details</a>
+            <a href= "{% url 'playlist_detail' playlist.pk %}">Details</a>
             <form action="{% url 'playlist_delete' playlist.pk %}" method post>
                 {% csrf_token%}
                 <button type ="submit" class = "btn btn-danger">Delete playlist</button>
