--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -8,6 +8,7 @@
         {% for playlist in playlists %}
             <h3> {{ playlist.name }} </h3>
             <a href= "{% url 'playlist_detail' playlist.pk %}">Details</a>
+            <a href= "{% url 'playlist_edit' playlist.pk %}">Edit</a>
             <form action="{% url 'playlist_delete' playlist.pk %}" method post>
                 {% csrf_token%}
                 <button type ="submit" class = "btn btn-danger">Delete playlist</button>
