--- a/music_streaming/templates/index.html
+++ b/music_streaming/templates/index.html
@@ -3,19 +3,36 @@
 {% block title %} Song List {% endblock title %}
 
 {% block content %}
-<h1>Song List</h1>
-{% for song in all_songs %}
-    <div>
-        <h2>{{ song.title }}</h2>
-        <p>{{ song.artist }}</p>
-        <p>{{ song.album }}</p>
-        <p>{{ song.genre }}</p>
-        <p>{{ song.year }}</p>
-        <p>{{ song.length }}</p>
+<h1>Song List:</h1>
+{% if all_songs %}
+    <div class = "table-responsive">
+        <table class = "table talbe-striped">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Artist</th>
+                    <th>Album</th>
+                    <th>Genre</th>
+                    <th>Year</th>
+                    <th>Length</th>
+                </tr>
+            </thread>
+            <tbody>
+                {% for song in all_songs %}
+                <tr>
+                    <td>{{ song.title }}</td>
+                    <td>{{ song.artist }}</td>
+                    <td>{{ song.album }}</td>
+                    <td>{{ song.genre }}</td>
+                    <td>{{ song.year }}</td>
+                    <td>{{ song.length }}</td>
+                </tr>
+                {% endfor %}
+        </table>
     </div>
-    {% empty %}
+{% else %}
     <p>No songs are available.</p>
-{% endfor %}
+{% endif %}
 {% if user.is_authenticated %}
     <a href="{% url 'profile' %}">Return to Profile</a>
 {% else %}
