--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -5,15 +5,29 @@
     <h1>Welcome back, {{ user.name }}.</h1>
     {% if playlists %}
         <h2> Playlists: </h2>
-        {% for playlist in playlists %}
-            <h3> {{ playlist.name }} </h3>
-            <a href= "{% url 'playlist_detail' playlist.pk %}">Details</a>
-            <a href= "{% url 'playlist_edit' playlist.pk %}">Edit</a>
-            <form action="{% url 'playlist_delete' playlist.pk %}" method post>
-                {% csrf_token%}
-                <button type ="submit" class = "btn btn-danger">Delete playlist</button>
-            </form>
-        {% endfor %}
+        <div class = "table-responsive">
+            <table class = "table table-striped">
+                <thead>
+                    <tr>
+                        <th>Playlist Name</th>
+                        <th>Description</th>
+                        <th>Number of Songs</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for playlist in playlists %}
+                        <tr>
+                            <td>{{ playlist.name }}</td>
+                            <td>{{ playlist.description }}</td>
+                            <td>{{ playlist.songs.count }}</td>
+                            <td><a href= "{% url 'playlist_detail' playlist.pk %}">Details</a></td>
+                            <td><a href= "{% url 'playlist_edit' playlist.pk %}">Edit</a></td>
+                            <td><a href= "{% url 'playlist_delete' playlist.pk %}">Delete</a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     {% else%}
         <p> You haven't created a playlist yet! <a href = "{% url 'playlist_create' %}">Create one</a></p>
     {% endif %}
