--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -31,6 +31,33 @@
     {% else%}
         <p> You haven't created a playlist yet! <a href = "{% url 'playlist_create' %}">Create one</a></p>
     {% endif %}
+    {% if recommendations %}
+        <h2> Recommended Songs: </h2>
+        <div class = "table-responsive">
+            <table class = "table table-striped">
+                <thead>
+                    <tr>
+                        <th>Song Name</th>
+                        <th>Artist</th>
+                        <th>Album</th>
+                        <th>Genre</th>
+                        <th>Duration</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for song in recommendations %}
+                        <tr>
+                            <td>{{ song.name }}</td>
+                            <td>{{ song.artist }}</td>
+                            <td>{{ song.album }}</td>
+                            <td>{{ song.genre }}</td>
+                            <td>{{ song.duration }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% endif %}
 
     <a href="{% url 'index' %}">Go to song lists</a>
     <a href="{% url 'password_change' %}">Change Password</a>
