--- a/music_streaming/templates/userProfile.html
+++ b/music_streaming/templates/userProfile.html
@@ -47,7 +47,7 @@
                 <tbody>
                     {% for song in recommendations %}
                         <tr>
-                            <td>{{ song.name }}</td>
+                            <td>{{ song.title }}</td>
                             <td>{{ song.artist }}</td>
                             <td>{{ song.album }}</td>
                             <td>{{ song.genre }}</td>
