--- a/music_streaming/templates/playlistDetail.html
+++ b/music_streaming/templates/playlistDetail.html
@@ -13,4 +13,5 @@
 
     <a href="{% url 'index' %}">Go to song lists</a>
     <a href="{% url 'profile' %}">Return to profile</a>
+    <a href="{% url 'playlist_share' object.pk %}">Share</a>
 {% endblock %}
