--- a/music_streaming/templates/base.html
+++ b/music_streaming/templates/base.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html style = "background-image: linear-gradient(black, red);">
+    {% load static %}
     <head>
-        <title>{%block title %}Music Streaming{% endblock title %}</title>
+        <title>Music Streaming</title>
         <!--adding bootstrap to html pages-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
-    <body>
-        <header>
+    <header class = "p-3 mb-3" style = "background-color: dimgray;">
             
-        </header>
+    </header>
+    <body>
+        
         {% block content %}{% endblock content %}
     </body>
 </html>
