--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme = "dark">
     {% load static %}
     <head>
         <title>Music Streaming</title>
@@ -7,28 +7,30 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
-    <header style = "background-color: dimgray;">
-            <nav class = "navbar navbar-expand-lg">
-                <div class = "container-fluid">
-                <a class = "mavbar-brand fw-bold" href = "{% url 'index' %}" style="color: white; text-decoration: none;">Music Streaming</a>
+    <header>
+            <nav class = "navbar navbar-expand-lg navbar-dark shadow align-items-center">
+                <div class = "container-fluid justify-content-center">
+                    <a class = "navbar-brand fw-bold" href = "{% url 'index' %}">Music Streaming</a>
                     {% if user.is_authenticated %}
-                        <ul class = "navbar-nav me-4 mb-2 mb-lg-0">
+                        <ul class = "navbar-nav me-auto mb-2 mb-lg-0">
                             <li class = "nav-item">
-                                <a class = "nav-link active" aria-current = "page" href = "{% url 'profile' %}" style="color: white; text-decoration: none;">Profile</a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link active" aria-current = "page" href = "{% url 'logout' %}" style="color: white; text-decoration: none;">Log Out</a>
-                            </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link active" aria-current = "page" href = "" style="color: white; text-decoration: none;">{{ user.name }}</a>
+                                <a class = "nav-link active" aria-current = "page" href = "{% url 'profile' %}">Profile</a>
                             </li>
                         </ul> 
+                        <ul class = "navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class = "nav-item">
+                                <a class = "nav-link active" aria-current = "page" href = "{% url 'logout' %}">Log Out</a>
+                            </li>
+                            <li class = "nav-item">
+                                <a class = "nav-link active" aria-current = "page" href = "">{{ user.name }}</a>
+                            </li>
+                        </ul>
                     {% endif %}
                 </div>
                
             </nav>
     </header>
-    <body>
+    <body style = "background-color: black;">
         {% block content %}{% endblock content %}
     </body>
 </html>
