--- a/templates/playlistCreation.html
+++ b/templates/playlistCreation.html
@@ -4,9 +4,9 @@
 {% block title %} Create Playlist {% endblock title%}
 
 {% block content %}
-    <h1>Create Playlist</h1>
+    <h1 style = "color: white;">Create Playlist</h1>
 
-    <form action = "" method = "post">
+    <form action = "" method = "post" style = "color: white;">
         {% csrf_token %}
         {{ form|crispy }}
         <button class = "btn btn-success" type = "submit">Save </button>
