--- a/templates/playlistDelete.html
+++ b/templates/playlistDelete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method = "post">
+<form method = "post" style = "color: white;">
     {% csrf_token %}
     <p>Are you sure you want to delete "{{ object.name }}"?</p>
     <input type = "submit" value = "Yes, delete.">
