--- a/templates/playlistEdit.html
+++ b/templates/playlistEdit.html
@@ -4,7 +4,7 @@
 {% block title %} Edit Playlists {% endblock title%}
 
 {% block content %}
-    <form method = "post">
+    <form method = "post" style = "color: white;">
         {% csrf_token %}
         {{ form|crispy }}
         <button class = "btn btn-success" type = "submit">Update</button>
