--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,9 +4,9 @@
 {% block title %} Register Account {% endblock title%}
 
 {% block content %}
-    <h1>Register Account</h1>
+    <h1 style = "color: white;">Register Account</h1>
 
-    <form action = "" method = POST>
+    <form action = "" method = POST style = "color: white;">
         {% csrf_token %}
         {{ form|crispy }}
         <button type = "submit" class = "btn btn-success"> Log In</button>
