--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,11 +4,11 @@
 {% block title %}Password Change{% endblock title %}
 
 {% block content %}
-<h1>Password change</h1>
-<p>Please enter your old password, for security's sake, and then enter
+<h1 style = "color: white;">Password change</h1>
+<p style = "color: white;">Please enter your old password, for security's sake, and then enter
   your new password twice so we can verify you typed it in correctly.</p>
 
-<form method="POST">{% csrf_token %}
+<form method="POST" style = "color: white;">{% csrf_token %}
   {{ form|crispy }}
   <input class="btn btn-success" type="submit" value="Change my password">
 </form>
