--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,13 +4,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Sign Up</h1>
+    <h1 style = "color: white;">Sign Up</h1>
 
-    <form action = "" method = "post">
+    <form action = "" method = "post" style = "color: white;">
         {% csrf_token %}
         {{ form|crispy }}
         <button type = "submit" class = "btn btn-success"> Sign Up </button>
     </form>
 
-    <p>Already have an account? <a href = "{% url 'login' %}"> Log In</a></p>
+    <p style = "color: white;">Already have an account? <a href = "{% url 'login' %}"> Log In</a></p>
 {%endblock content %}
