--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -2,11 +2,11 @@
 
 
 {% block content %}
-    <h1>Welcome back, {{ user.name }}.</h1>
+    <h1 style = "color: white;">Welcome back, {{ user.name }}.</h1>
     {% if playlists %}
-        <h2> Playlists: </h2>
+        <h2 style = "color: white;"> Playlists: </h2>
         <div class = "table-responsive">
-            <table class = "table table-striped">
+            <table class = "table table-striped table-dark">
                 <thead>
                     <tr>
                         <th>Playlist Name</th>
@@ -28,20 +28,21 @@
                 </tbody>
             </table>
         </div>
+        <a href = "{% url 'playlist_create' %}">Create a new playlist</a>
     {% else%}
-        <p> You haven't created a playlist yet! <a href = "{% url 'playlist_create' %}">Create one</a></p>
+        <p style = "color: white;"> You haven't created a playlist yet! <a href = "{% url 'playlist_create' %}">Create one</a></p>
     {% endif %}
     {% if recommendations %}
-        <h2> Recommended Songs: </h2>
+        <h2 style = "color: white;"> Recommended Songs: </h2>
         <div class = "table-responsive">
-            <table class = "table table-striped">
+            <table class = "table table-striped table-dark">
                 <thead>
                     <tr>
                         <th>Song Name</th>
                         <th>Artist</th>
                         <th>Album</th>
                         <th>Genre</th>
-                        <th>Duration</th>
+                        <th>Duration (in seconds)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -51,7 +52,7 @@
                             <td>{{ song.artist }}</td>
                             <td>{{ song.album }}</td>
                             <td>{{ song.genre }}</td>
-                            <td>{{ song.duration }}</td>
+                            <td>{{ song.length }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
